examples/test/testpolicy14408.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14408
  namespace: namespace364
spec:
  podSelector:
    matchLabels:
      key12: value12
      key23: value17
      key27: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value32
      podSelector:
        matchLabels:
          key7: value42
          key47: value5
          key12: value29
